// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoreOrLess renders correctly when expanded 1`] = `
<div
  className="react-flex-view flex-column more-or-less more fancy-class-name"
  style={
    Object {
      "WebkitFlex": "0 0 auto",
      "flex": "0 0 auto",
      "msFlex": "0 0 auto",
    }
  }
>
  content
  <div
    className="react-flex-view align-content-center justify-content-center expand-button"
    onClick={[Function]}
    style={
      Object {
        "WebkitFlex": "0 0 auto",
        "flex": "0 0 auto",
        "msFlex": "0 0 auto",
      }
    }
  >
    angle-up
  </div>
</div>
`;

exports[`MoreOrLess renders correctly when not expanded 1`] = `
<div
  className="react-flex-view flex-column more-or-less less fancy-class-name"
  style={
    Object {
      "WebkitFlex": "0 0 auto",
      "flex": "0 0 auto",
      "msFlex": "0 0 auto",
    }
  }
>
  content
  <div
    className="react-flex-view align-content-center justify-content-center expand-button"
    onClick={[Function]}
    style={
      Object {
        "WebkitFlex": "0 0 auto",
        "flex": "0 0 auto",
        "msFlex": "0 0 auto",
      }
    }
  >
    angle-down
  </div>
</div>
`;
